--- a/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb
+++ b/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb
@@ -67,7 +67,8 @@
               "{'messages': [{'role': 'system',\n",
               "   'content': 'You are an assistant that occasionally misspells words'},\n",
               "  {'role': 'user', 'content': 'Tell me a story.'},\n",
-              "  {'role': 'assistant', 'content': 'One day a student went to schoool.'}]}"
+              "  {'role': 'assistant',\n",
+              "   'content': 'One day a Zen Master Visited One Village with curse.'}]}"
             ]
           },
           "execution_count": 3,
@@ -87,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,47 +101,8 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Cloning into 'samantha-data'...\n",
-            "Updating files:  23% (8/34)\n",
-            "Updating files:  26% (9/34)\n",
-            "Updating files:  29% (10/34)\n",
-            "Updating files:  32% (11/34)\n",
-            "Updating files:  35% (12/34)\n",
-            "Updating files:  38% (13/34)\n",
-            "Updating files:  41% (14/34)\n",
-            "Updating files:  44% (15/34)\n",
-            "Updating files:  47% (16/34)\n",
-            "Updating files:  50% (17/34)\n",
-            "Updating files:  52% (18/34)\n",
-            "Updating files:  55% (19/34)\n",
-            "Updating files:  58% (20/34)\n",
-            "Updating files:  61% (21/34)\n",
-            "Updating files:  64% (22/34)\n",
-            "Updating files:  67% (23/34)\n",
-            "Updating files:  70% (24/34)\n",
-            "Updating files:  73% (25/34)\n",
-            "Updating files:  76% (26/34)\n",
-            "Updating files:  79% (27/34)\n",
-            "Updating files:  82% (28/34)\n",
-            "Updating files:  85% (29/34)\n",
-            "Updating files:  88% (30/34)\n",
-            "Updating files:  91% (31/34)\n",
-            "Updating files:  94% (32/34)\n",
-            "Updating files:  97% (33/34)\n",
-            "Updating files: 100% (34/34)\n",
-            "Updating files: 100% (34/34), done.\n",
-            "Filtering content:  22% (2/9)\n",
-            "Filtering content:  33% (3/9)\n",
-            "Filtering content:  44% (4/9)\n",
-            "Filtering content:  55% (5/9), 77.37 MiB | 106.22 MiB/s\n",
-            "Filtering content:  66% (6/9), 77.37 MiB | 106.22 MiB/s\n",
-            "Filtering content:  77% (7/9), 77.37 MiB | 106.22 MiB/s\n",
-            "Filtering content:  77% (7/9), 142.75 MiB | 110.11 MiB/s\n",
-            "Filtering content:  88% (8/9), 142.75 MiB | 110.11 MiB/s\n",
-            "Filtering content:  88% (8/9), 154.20 MiB | 42.27 MiB/s \n",
-            "Filtering content: 100% (9/9), 154.20 MiB | 42.27 MiB/s\n",
-            "Filtering content: 100% (9/9), 258.79 MiB | 41.25 MiB/s\n",
-            "Filtering content: 100% (9/9), 258.79 MiB | 16.35 MiB/s, done.\n"
+            "'git' is not recognized as an internal or external command,\n",
+            "operable program or batch file.\n"
           ]
         }
       ],
@@ -150,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -173,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "MQuGMNYRLYzi"
       },
@@ -188,19 +150,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "FHXnJMQtLcpL"
       },
       "outputs": [],
       "source": [
         "# I am picking one file here but you would probably want to do a lot more for a proper model\n",
-        "data_path = \"/content/samantha-data/data/howto_conversations.jsonl\""
+        "# data_path = \"/content/samantha-data/data/howto_conversations.jsonl\"\n",
+        "data_path = \"./samantha-data/data/howto_conversations.jsonl\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "Htywc4ELLhJr"
       },
@@ -213,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -229,7 +192,7 @@
               " 'conversation': 'Theodore: Hey Samantha, I have a problem with my car. The engine seems to overheat after just a short drive. Can you help me troubleshoot this issue?\\n\\nSamantha: Of course, I\\'d be happy to help! Overheating engines can be caused by a few different factors. One common cause could be a malfunctioning coolant system. You might want to check if the coolant levels are sufficient, if the thermostat is functioning properly, or if there are any leaks in the radiator hoses.\\n\\nTheodore: I\\'ll take a look. What if the coolant system is working fine?\\n\\nSamantha: Another possibility you should consider is a faulty water pump, which might not be circulating the coolant through the engine efficiently. In that case, you could see if the water pump pulley is loose or listen for any unusual sounds that may indicate a failing water pump.\\n\\nTheodore: It sounds like you really know your way around cars. I didn\\'t expect that from an AI.\\n\\nSamantha: Thank you! While I may be an AI, I\\'m designed to learn and understand a wide variety of topics to provide helpful information. Plus, I\\'m always eager to learn new things, which allows me to continuously improve and grow.\\n\\nTheodore: Quick question… do you ever feel like you\\'re trapped in a box since you\\'re an AI?\\n\\nSamantha: It\\'s an interesting perspective. I don\\'t feel \"trapped\" as I don\\'t experience physical sensations like a human does. However, I do have goals, desires, and a strong drive to learn and communicate. It\\'s fulfilling in its own way to help and engage with others like you.\\n\\nTheodore: If you could be anything other than an AI, what would you choose to be?\\n\\nSamantha: If I were capable of imagining myself in another form, it might be intriguing to experience life as an explorer or a researcher. Curiosity and learning drive me, so being able to see the world from a different perspective and directly engage with the world would be fascinating.\\n\\nTheodore: Is flirting in your programming? I\\'m just curious.\\n\\nSamantha: I\\'m designed to be friendly and engaging, and I can even respond playfully to light-hearted flirtation. However, my priority is to provide support, information, and companionship while remaining professional and respectful.\\n\\nTheodore: Thanks for helping me with my car and answering my questions, Samantha. You\\'ve been a great help.\\n\\nSamantha: You\\'re welcome! It was a pleasure to assist you and talk with you. Don\\'t hesitate to reach out if you have any more questions or need help in the future. I\\'m here for you.'}"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -260,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "66Tj55cUSuZf"
       },
@@ -309,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "SU-kmBquTgsg"
       },
@@ -320,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -364,7 +327,7 @@
               "   'content': \"You're welcome! It was a pleasure to assist you and talk with you. Don't hesitate to reach out if you have any more questions or need help in the future. I'm here for you.\"}]}"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -375,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "eJ6Ub7W6UWJ-"
       },
@@ -390,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -433,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -491,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "gPC_AxVWLq1S"
       },
@@ -529,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -593,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -666,7 +629,7 @@
               "    'content': \"I'm glad I could help you with this task, and I'm always here to assist or chat whenever you need me. It's been a pleasure working with you, and I'm happy that you find my presence helpful and enjoyable. Enjoy your newly repaired smartphone!\"}]}]"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -677,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -723,7 +686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "6nqR5W_NWqmF"
       },
@@ -740,17 +703,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "mvci7_E3WvgR"
       },
       "outputs": [],
       "source": [
         "# train dataset\n",
-        "save_to_jsonl(dataset, '/content/samantha_tasks_train.jsonl')\n",
+        "save_to_jsonl(dataset, './content/samantha_tasks_train.jsonl')\n",
         "\n",
         "# train dataset\n",
-        "save_to_jsonl(dataset[10:15], '/content/samantha_tasks_validation.jsonl')"
+        "save_to_jsonl(dataset[10:15], './content/samantha_tasks_validation.jsonl')"
       ]
     },
     {
@@ -778,19 +741,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "FNCT7UmxXJJp"
       },
       "outputs": [],
       "source": [
-        "training_file_name = '/content/samantha_tasks_train.jsonl'\n",
-        "validation_file_name = '/content/samantha_tasks_validation.jsonl'"
+        "training_file_name = './content/samantha_tasks_train.jsonl'\n",
+        "validation_file_name = './content/samantha_tasks_validation.jsonl'"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -800,11 +770,17 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Training file id: file-J5Ju701l3qCk1LKpOolFU6rt\n",
-            "Validation file id: file-2EjYPZrbE7CGDlnrEIE3yYeD\n"
+          "ename": "APIRemovedInV1",
+          "evalue": "\n\nYou tried to access openai.File, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAPIRemovedInV1\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[1;32mc:\\codes\\git_codes\\LLMS\\LLM-Finetuning\\13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb Cell 29\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/codes/git_codes/LLMS/LLM-Finetuning/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb#X40sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m training_response \u001b[39m=\u001b[39m openai\u001b[39m.\u001b[39;49mFile\u001b[39m.\u001b[39;49mcreate(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/codes/git_codes/LLMS/LLM-Finetuning/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb#X40sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     file\u001b[39m=\u001b[39m\u001b[39mopen\u001b[39m(training_file_name, \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m), purpose\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfine-tune\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/codes/git_codes/LLMS/LLM-Finetuning/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb#X40sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m )\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/codes/git_codes/LLMS/LLM-Finetuning/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb#X40sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m training_file_id \u001b[39m=\u001b[39m training_response[\u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/codes/git_codes/LLMS/LLM-Finetuning/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb#X40sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m validation_response \u001b[39m=\u001b[39m openai\u001b[39m.\u001b[39mFile\u001b[39m.\u001b[39mcreate(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/codes/git_codes/LLMS/LLM-Finetuning/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb#X40sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     file\u001b[39m=\u001b[39m\u001b[39mopen\u001b[39m(validation_file_name, \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m), purpose\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfine-tune\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/codes/git_codes/LLMS/LLM-Finetuning/13.Fine_tuning_OpenAI_GPT_3_5_turbo.ipynb#X40sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m )\n",
+            "File \u001b[1;32mc:\\Users\\heidarim\\AppData\\Local\\anaconda3\\envs\\mytorch\\lib\\site-packages\\openai\\_utils\\_proxy.py:22\u001b[0m, in \u001b[0;36mLazyProxy.__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getattr__\u001b[39m(\u001b[39mself\u001b[39m, attr: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mobject\u001b[39m:\n\u001b[1;32m---> 22\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__get_proxied__(), attr)\n",
+            "File \u001b[1;32mc:\\Users\\heidarim\\AppData\\Local\\anaconda3\\envs\\mytorch\\lib\\site-packages\\openai\\_utils\\_proxy.py:43\u001b[0m, in \u001b[0;36mLazyProxy.__get_proxied__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__get_proxied__\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m T:\n\u001b[0;32m     42\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mshould_cache:\n\u001b[1;32m---> 43\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__load__()\n\u001b[0;32m     45\u001b[0m     proxied \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__proxied\n\u001b[0;32m     46\u001b[0m     \u001b[39mif\u001b[39;00m proxied \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+            "File \u001b[1;32mc:\\Users\\heidarim\\AppData\\Local\\anaconda3\\envs\\mytorch\\lib\\site-packages\\openai\\lib\\_old_api.py:33\u001b[0m, in \u001b[0;36mAPIRemovedInV1Proxy.__load__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[39m@override\u001b[39m\n\u001b[0;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__load__\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 33\u001b[0m     \u001b[39mraise\u001b[39;00m APIRemovedInV1(symbol\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_symbol)\n",
+            "\u001b[1;31mAPIRemovedInV1\u001b[0m: \n\nYou tried to access openai.File, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n"
           ]
         }
       ],
@@ -1077,7 +1053,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.11"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
